<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:id="@+id/registration_form">

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email_tv"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/email_et"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/emailTV"
            android:autofillHints="@string/name_autofillhint"/>

        <TextView
            android:id="@+id/pwdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pwd_tv"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uidET"/>

        <EditText
            android:id="@+id/pwdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/pwd_et"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/pwdTV"
            android:autofillHints="@string/name_autofillhint"/>

        <TextView
            android:id="@+id/confPwdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/conf_pwd_tv"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwdET"/>

        <EditText
            android:id="@+id/confPwdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/pwd_et"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/confPwdTV"
            android:autofillHints="@string/name_autofillhint"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_form"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/to_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"/>

</LinearLayout>