<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searching_act"
    tools:context="edu.psu.lionconnect.SearchActivity">

    <SearchView
        android:id="@+id/search_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:iconifiedByDefault="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_widget"/>

    <Button
        android:id="@+id/view_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view_profile"
        app:layout_constraintTop_toBottomOf="@id/search_results"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:layout_marginStart="100dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_results"
        app:layout_constraintStart_toEndOf="@+id/view_profile"
        android:text="@string/follow"
        android:background="@color/colorPrimary"
        android:layout_marginStart="10dp"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/unfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/unfollow"
        app:layout_constraintTop_toBottomOf="@id/search_results"
        app:layout_constraintStart_toEndOf="@+id/view_profile"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:onClick="onClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>
